--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <center>
       <h1>Site Under Update. Will Come Soon.</h1>
     </center>
+    <article>
+      <h3>Meanwhile... you can read..</h3>
+      <p>
+        A man whose hair was turning gray had two wives. One wife was much younger than the man, and the other wife was much older. The older wife was embarrassed at being married to man much younger than herself. At night, whenever he was with her, she would pluck out all of his hairs that were not gray. The younger woman was equally embarrassed at being married to a man so much older than
+        herself. At night, whenever he was with her, she would pluck out all of hairs that were gray. Between the two wives, the man was soon left without a hair on his head.
+      </p>
+    </article>
+    <footer>
+      <a href="https://www.linkedin.com/in/md-nahid-hasan-293617142/" target="blank">
+        nahidhasan@2020
+      </a>
+    </footer>
   </body>
   <script src="index.js" />
 </html>
