--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>PortfolioPerfect</title>
+    <title>NAHID HASAN</title>
 
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -51,7 +51,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="Nahid Hasan" /></a>
+            <a href="#hero" class="site-logo"><img src="assets/img/logo.png" height="30" alt="Nahid Hasan" /></a>
           </div>
           <!-- /.navbar-header -->
 
@@ -168,7 +168,7 @@
               <div class="skill">
                 <h4>React Native</h4>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" data-transitiongoal="45"></div>
+                  <div class="progress-bar" role="progressbar" data-transitiongoal="85"></div>
                   <!-- /.progress-bar -->
                 </div>
                 <!-- /.progress -->
@@ -191,7 +191,7 @@
               <div class="service">
                 <img src="assets/img/front-end.svg" alt="Front End Developer" />
                 <h4>Front-end</h4>
-                <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
+                <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as React JS</p>
               </div>
               <!-- /.service -->
             </div>
@@ -227,9 +227,9 @@
               <div class="portfolio-item">
                 <img src="assets/img/portfolio-1.jpg" class="img-res" alt="" />
                 <div class="portfolio-item-info">
-                  <h4>Project Title</h4>
-                  <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
-                  <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                  <h4>Finder-lbs.com</h4>
+                  <a href="https://www.finder-lbs.com/" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
+                  <a href="https://www.finder-lbs.com/"><span class="glyphicon glyphicon-link"></span></a>
                 </div>
                 <!-- /.portfolio-item-info -->
               </div>
@@ -239,9 +239,9 @@
               <div class="portfolio-item">
                 <img src="assets/img/portfolio-2.jpg" class="img-res" alt="" />
                 <div class="portfolio-item-info">
-                  <h4>Project Title</h4>
-                  <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
-                  <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                  <h4>Truck Kothay</h4>
+                  <a href="http://truck.kothay.com/" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
+                  <a href="http://truck.kothay.com/"><span class="glyphicon glyphicon-link"></span></a>
                 </div>
                 <!-- /.portfolio-item-info -->
               </div>
