--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-4 col-xs-12">
-              <p class="counter start" data-to="10" data-speed="2000">0</p>
+              <p class="counter start" data-to="3" data-speed="2000">0</p>
               <h4>Years Experience</h4>
             </div>
             <div class="col-sm-4 col-xs-12">
-              <p class="counter start" data-to="120" data-speed="2000">0</p>
+              <p class="counter start" data-to="25" data-speed="2000">0</p>
               <h4>Projects Delivered</h4>
             </div>
             <div class="col-sm-4 col-xs-12">
@@ -336,7 +336,7 @@
                 <textarea name="message" id="mesaage" class="form-control" placeholder="Message" required></textarea>
               </div>
             </div>
-            <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
+            <button href="mailto:nahid.mbstu.ict@gmail.com" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
           </form>
         </div>
       </section>
@@ -353,7 +353,7 @@
             <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
             <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
           </div>
-          <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2017. All Rights Reserved</p></div>
+          <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2020. All Rights Reserved</p></div>
           <div class="col-sm-4 col-xs-3">
             <div class="text-right page-scroll">
               <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
