--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" media="none" onload="this.media='all'" />
 
     <!-- Favicon
     ================================================== -->
@@ -28,11 +28,11 @@
     <!-- Stylesheets
     ================================================== -->
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" media="none" onload="this.media='all'" />
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" media="none" onload="this.media='all'" />
+    <link href="assets/css/responsive.css" rel="stylesheet" media="none" onload="this.media='all'" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
