--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style></style>
   </head>
+  <!-- <div class="loader"></div> -->
   <body>
     <header id="masthead" class="site-header" data-anchor-target=".hero" data-top="background: rgba(255,255,255,0); padding: 30px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0);" data-top-bottom="background: rgba(255,255,255,1); padding: 10px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.2);">
       <nav id="primary-navigation" class="site-navigation">
@@ -86,7 +88,7 @@
           </div>
 
           <div class="col-md-6 text-right">
-            <img src="assets/img/alex-vidal.png" alt="alex-vidal" />
+            <img src="assets/img/guys.png" alt="img" />
           </div>
         </div>
       </div>
@@ -519,5 +521,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-progressbar/0.9.0/bootstrap-progressbar.min.js"></script>
     <script src="assets/js/jquery.countTo.min.js"></script>
     <script src="assets/js/script.js"></script>
+    <script></script>
   </body>
 </html>
