added css defer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a href="#hero" class="site-logo"><img src="assets/img/logo.png" height="30" alt="Nahid Hasan" /></a>
+            <a href="#hero" class="site-logo"><img loading="lazy" src="assets/img/logo.png" height="30" alt="Nahid Hasan" /></a>
           </div>
           <!-- /.navbar-header -->
 
@@ -88,7 +88,7 @@
           </div>
 
           <div class="col-md-6 text-right">
-            <img src="assets/img/guys.png" alt="img" />
+            <img loading="lazy" src="assets/img/guys.png" alt="img" />
           </div>
         </div>
       </div>
@@ -227,7 +227,7 @@
           <div class="row">
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/portfolio-1.jpg" class="img-res" alt="" />
+                <img loading="lazy" src="assets/img/portfolio-1.jpg" class="img-res" alt="" />
                 <div class="portfolio-item-info">
                   <h4>Finder-lbs.com</h4>
                   <a href="https://www.finder-lbs.com/" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -239,7 +239,7 @@
             </div>
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/portfolio-2.jpg" class="img-res" alt="" />
+                <img loading="lazy" src="assets/img/portfolio-2.jpg" class="img-res" alt="" />
                 <div class="portfolio-item-info">
                   <h4>Truck Kothay</h4>
                   <a href="http://truck.kothay.com/" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -251,7 +251,7 @@
             </div>
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/portfolio-3.jpg" class="img-res" alt="" />
+                <img loading="lazy" src="assets/img/portfolio-3.jpg" class="img-res" alt="" />
                 <div class="portfolio-item-info">
                   <h4>Project Title</h4>
                   <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -263,7 +263,7 @@
             </div>
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/portfolio-4.jpg" class="img-res" alt="" />
+                <img loading="lazy" src="assets/img/portfolio-4.jpg" class="img-res" alt="" />
                 <div class="portfolio-item-info">
                   <h4>Project Title</h4>
                   <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -275,7 +275,7 @@
             </div>
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/portfolio-5.jpg" class="img-res" alt="" />
+                <img loading="lazy" src="assets/img/portfolio-5.jpg" class="img-res" alt="" />
                 <div class="portfolio-item-info">
                   <h4>Project Title</h4>
                   <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -287,7 +287,7 @@
             </div>
             <div class="col-md-4 col-xs-6">
               <div class="portfolio-item">
-                <img src="assets/img/portfolio-6.jpg" class="img-res" alt="" />
+                <img loading="lazy" src="assets/img/portfolio-6.jpg" class="img-res" alt="" />
                 <div class="portfolio-item-info">
                   <h4>Project Title</h4>
                   <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
