--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
+      #loading-modal {
+        height: 100vh;
+        width: 100vw;
+        z-index: 100;
+        background-color: #f4f4f4;
+        position: absolute;
+        padding-top: 45vh;
+      }
       #loading {
         border: 16px solid #f3f3f3; /* Light grey */
         border-top: 16px solid #3498db; /* Blue */
@@ -62,10 +70,14 @@
     <script>
       window.onload = function () {
         document.getElementById("loading").remove();
+        document.getElementById("loading-modal").remove();
       };
     </script>
   </head>
-  <div id="loading"></div>
+
+  <div id="loading-modal">
+    <div id="loading"></div>
+  </div>
 
   <body>
     <header id="masthead" class="site-header" data-anchor-target=".hero" data-top="background: rgba(255,255,255,0); padding: 30px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0);" data-top-bottom="background: rgba(255,255,255,1); padding: 10px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.2);">
